Display initial configuration in the Configuration Fragment.

--- a/app/src/main/res/layout/fragment_configuration.xml
+++ b/app/src/main/res/layout/fragment_configuration.xml
@@ -7,12 +7,41 @@
     tools:context=".configuration.ConfigurationFragment">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="@string/choose_settings"
+        app:layout_constraintBottom_toTopOf="@+id/setsNumberChooserView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintVertical_chainStyle="spread" />
+
+    <me.vaughandroid.intervaltimer.widgets.NumberChooserView
+        android:id="@+id/setsNumberChooserView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/workTimeNumberChooserView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title" />
+
+    <me.vaughandroid.intervaltimer.widgets.NumberChooserView
+        android:id="@+id/workTimeNumberChooserView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/restTimeNumberChooserView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/setsNumberChooserView" />
+
+    <me.vaughandroid.intervaltimer.widgets.NumberChooserView
+        android:id="@+id/restTimeNumberChooserView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/workTimeNumberChooserView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
