Split configuration package into domain, data, and view subpackages.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     tools:context=".MainActivity">
 
     <fragment
-        android:name="me.vaughandroid.intervaltimer.configuration.ConfigurationFragment"
+        android:name="me.vaughandroid.intervaltimer.configuration.view.ConfigurationFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/fragment_configuration" />
